--- a/template.tex
+++ b/template.tex
@@ -211,10 +211,9 @@ These are our conclusions.  Although this example has used a colloquial
 dialogue, real papers should use a formal writting style.  After the
 conclusions we include some acknowledgments.
 
-\comment{
 % deluxetable works for aastex6, not much for emulateapj:
 \begin{deluxetable*}{lr@{}lr@{}lrrccrrrccrr}
-%\tabletypesize{\footnotesize}
+\tabletypesize{\footnotesize}
 % \tablecolumns{14}
 \tablewidth{\linewidth}
 \tablecaption{Planets \label{table:allplanets}}
@@ -257,7 +256,7 @@ conclusions we include some acknowledgments.
 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
 }
 \end{deluxetable*}
-}
+
 
 Lorem Ipsum is simply dummy text of the printing and typesetting
 industry. Lorem Ipsum has been the industry's standard dummy text ever
